--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,4 +1,14 @@
+@import "./global_Styles/variables";
+
 body {
-  background-color: #1c1f38;
-  color: #ffffff; 
+  background-color: $primary-background-color;
+  color: #ffffff;
+  font-family: $font-family;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
