--- a/client/src/global_Styles/_variables.scss
+++ b/client/src/global_Styles/_variables.scss
@@ -1,10 +1,14 @@
 // Color Variables
-$primary-background-color: #1c1f38;
 $container-background-color: #303657;
 $container-border-color: #3b3f70;
-$header-text-color: #8c94c1;
-$data-text-color: #d1d9f0;
 $hover-background: rgba(255, 255, 255, 0.1);
+$primary-background-color: #1c1f38;
+$primary-button-background-color: #8c94c1;
+$text-light-color: #d1d9f0;
+$text-middle-color: #8c94c1;
+$text-dark-color: #2a2e52;
+//$data-text-color: #d1d9f0;
+//$header-text-color: #8c94c1;
 
 // Typography
 $font-family: 'Inter', sans-serif;
