--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -2,7 +2,7 @@
 
 body {
   background-color: $primary-background-color;
-  color: #ffffff;
+  color: white;
   font-family: $font-family;
   margin: 0;
   -webkit-font-smoothing: antialiased;
